--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -71,7 +71,7 @@ From {{etyl|fro}} {{term|cortine|lang=fro}}, from {{etyl|la}} {{term|cortina|lan
 * Luxembourgish: {{t-|lb|Rido|f}}
 * Macedonian: {{t-|mk|завеса|f|tr=závesa}},  {{t-|mk|перде|n|tr=pérde}}
 * Malay: {{t-|ms|tirai}}, {{t-|ms|tabir}}
-* Norwegian: {{t+|no|gardin|m|f|n}}
+* Norwegian: {{t+|no|gardin|m|f}}
 * {{trreq|nov}}
 * Occitan: {{t+|oc|cortina|f}}
 * {{trreq|ps}}
