--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -15,6 +15,11 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 {{en-verb}}
 
 # To [[regurgitate]] the contents of a [[stomach]]; [[puke]].
+#* Bible, Jonah ii. 10
+#*: The fish {{...}} '''vomited''' out Jonah upon the dry land.
+# To eject from any hollow place; to belch forth; to emit.
+#* Milton
+#*: Like the sons of Vulcan, '''vomit''' smoke.
 
 ====Derived terms====
 * [[vomitable]]
