--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -15,6 +15,10 @@ From {{etyl|fro}} {{term|cortine|lang=fro}}, from {{etyl|la}} {{term|cortina|lan
 
 # A piece of [[cloth]] [[cover]]ing a [[window]] to keep the [[sun]] from shining inside.
 # A similar piece of cloth that separates the [[audience]] and the [[stage]] in a [[theater]].
+#*{{quote-book|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
+|title=[[w:The Case of Miss Elliott|The Lisson Grove Mystery]]
+|chapter=2|url=http://openlibrary.org/works/OL8479084W
+|passage=“H'm&nbsp;!&rdquo; he said, &ldquo;so, so&mdash;it is a tragedy in a prologue and three acts. I am going down this afternoon to see the '''curtain''' fall for the third time on what [...] will prove a good burlesque&nbsp;; but it all began dramatically enough. It was last Saturday … that two boys, playing in the little spinney just outside Wembley Park Station, came across three large parcels done up in American cloth. …”}}
 # {{context|fortifications}} The flat area of [[wall]] which connects two [[bastions]] or [[towers]]; the main area of a fortified wall.
 #* '''1603''', John Florio, translating Michel de Montaigne, ''Essays'', Folio Society 2006, vol. 1, p. 220:
 #*: Captain ''Rense'', beleagring the Citie of ''Errona'' for us, [...] caused a forcible mine to be wrought under a great '''curtine''' of the walles [...].
