--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -82,6 +82,10 @@ First attested in {{etyl|enm}}, probably from {{etyl|gd}} {{term|stob||to prick,
 {{en-verb|stab|b|ed}}
 
 # {{transitive}} To [[pierce]] or to [[wound]] with a [[pointed]] [[tool]] or [[weapon]], especially a [[knife]] or [[dagger]].
+#*{{quote-book|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
+|title=[[w:The Case of Miss Elliott|The Tremarn Case]]
+|chapter=1|url=http://openlibrary.org/works/OL8479084W
+|passage=“There the cause of death was soon ascertained ; the victim of this daring outrage had been '''stabbed''' to death from ear to ear with a long, sharp instrument, in shape like an antique stiletto, which […] was subsequently found under the cushions of the hansom.&nbsp;[…]”}}
 #: ''If you '''stab''' him in the heart he won't live long enough to retaliate.''
 # {{intransitive}} To [[recklessly]] hit with the [[tip]] of a [[pointed]] [[object]], such as a [[weapon]] or [[finger]] {{non-gloss definition|(often used with [[at]])}}.
 #: ''He '''stabbed''' at my face with the twig but luckily kept missing my eyes.''
