--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -24,6 +24,7 @@
 
 =====Translations=====
 {{trans-top|cloth made of matted fibres of wool}}
+* Armenian: {{t|hy|թաղիք|tr=tʿałikʿ|sc=Armn}}
 * Asturian: {{t-|ast|fieltru|m}}
 * Bulgarian: {{t-|bg|филц|m|tr=filts|sc=Cyrl}}
 * Catalan: {{t-|ca|feltre|m}}
