--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -215,9 +215,9 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|butere||butter|lang=ang}}, from {{et
 *: Bavarian: {{tø|bar|Budda|m}}
 * Greek: {{t+|el|βούτυρο|n|tr=voútyro}}
 * Greenlandic: {{t-|kl|punneq}}
-* {{trreq|gu}}
+* Gujarati: {{t|gu|માખણ|tr=mAkhaN|sc=Gujr}}, {{t|gu|મસ્કો|tr=masko|sc=Gujr}}
 * Hebrew: {{t+|he|חמאה|f|alt=חֶמְאָה|tr=khem'a}}
-* Hindi: {{t-|hi|घी|tr=ghī}}, {{t-|hi|मक्खन|tr=makkhan}}
+* Hindi: {{t-|hi|घी|tr=ghī}}, {{t-|hi|मक्खन|tr=makkhan}}, {{t|hi|माखन|tr=mAkhan|sc=Deva}}
 * Hungarian: {{t+|hu|vaj}}
 * Icelandic: {{t+|is|smjör|n}}
 * Ido: {{t+|io|butro}}
