--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -109,7 +109,7 @@ From {{etyl|enm}} {{term|fighten|lang=enm}}, from {{etyl|ang}} {{term|feohtan||t
 * Swahili: {{t+|sw|vita}}
 * Swedish: {{t+|sv|strida}}, {{t+|sv|slåss}}, {{t+|sv|kämpa}}
 * {{trreq|Thai}}
-* {{trreq|Tibetan}}
+* Tibetan: {{t|bo|རྒྱ་འདྲེ|tr=rgya 'dre|sc=Tibt}}
 * Tok Pisin: {{t-|tpi|paitim}}
 * Turkish: {{t+|tr|savaşmak}}
 * Tuvan: {{tø|tyv|демисежир|tr=demisežir}}
