--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -44,11 +44,13 @@ Note the different forms, corresponds to different forms of [[真]].
 ----
 
 ==Mandarin==
-
 ===Hanzi===
 {{cmn-hanzi|pin=[[shèn]] ([[shen4]])|wg=shen<sup>4</sup>}}
 
 # {{defn|lang=cmn|sort=心10}}
+
+====Compounds====
+* [[唐慎]] (''Táng Shèn''): a [[female]] [[given name]]
 
 ----
 
