--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -5,12 +5,12 @@
 {{Han compound|从|t1=two people|土|t2=ground|ls=ic}} = two people sitting on the ground.<ref>http://www.yellowbridge.com/chinese/character-etymology.php?searchChinese=1&zi=%E5%9D%90#</ref>
 
 ===Han character===
-{{Han char|rn=32|rad=土|as=04|sn=7|four=8810<sub>4</sub>|canj=人人土 (OOG)}}
+{{Han char|rn=32|rad=土|as=04|sn=7|four=8810<sub>4</sub>|canj=人人土 (OOG)|ids=⿻[[土]]⿰[[人]]人}}
 
 # [[sit]]
 # [[seat]]
-# ride, travel by
-# [archaic] to [[offend]]; to [[violate]] (a decree or law)
+# [[ride]], [[travel]] by
+# [archaic] to [[offend]], to [[violate]] (a decree or law)
 
 ====References====
 <references/>
