--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -86,14 +86,14 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
 * Asturian: {{t+|ast|falar}}
 * Azeri: {{t+|az|danışmaq}}
-* Belarusian: {{t-|be|гаварыць|tr=havarýc’}}, {{t-|be|размаўляць|tr=razmaŭljác’}}
+* Belarusian: {{t-|be|гаварыць|tr=havarýcʹ}}, {{t-|be|размаўляць|tr=razmaŭljácʹ}}
 * Bengali: {{t-|bn|বলা|tr=bôla|sc=Beng}}
 * Breton: {{t+|br|komz}}
-* Bulgarian: {{t+|bg|говоря|tr=govorja}}
+* Bulgarian: {{t+|bg|говоря|tr=govórja}}
 * Burmese: {{t+|my|ပြော|tr=pyaw:|sc=Mymr}}, {{qualifier|formal}} {{t+|my|မြွက်|tr=mywet|sc=Mymr}}
 * Catalan: {{t+|ca|parlar}}
 * Chinese:
-*: Mandarin: {{t-|cmn|說|sc=Hani}}, {{t-|cmn|说|tr=shuō|sc=Hani}}, {{t|cmn|說話|sc=Hani}}, {{t-|cmn|说话|tr=shuōhuà|sc=Hani}}, {{t-|cmn|講|sc=Hani}}, {{t-|cmn|讲|tr=jiǎng|sc=Hani}}
+*: Mandarin: {{t|cmn|說|sc=Hani}}, {{t+|cmn|说|tr=shuō|sc=Hani}}, {{t|cmn|說話|sc=Hani}}, {{t+|cmn|说话|tr=shuōhuà|sc=Hani}}, {{t|cmn|講|sc=Hani}}, {{t+|cmn|讲|tr=jiǎng|sc=Hani}}
 * Czech: {{t+|cs|mluvit}}, {{t-|cs|hovořit}}
 * Dalmatian: {{tø|dlm|faular}}
 * Danish: {{t+|da|tale}}
@@ -129,7 +129,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t+|jbo|tavla}}
 * Luxembourgish: {{t-|lb|schwätzen}}
-* Macedonian: {{t-|mk|зборува|tr=zboruva}}
+* Macedonian: {{t-|mk|зборува|tr=zbóruva}}
 {{trans-mid}}
 * Malay: {{t|ms|bercakap}}
 * Maltese: {{t-|mt|tkellem}}
@@ -150,7 +150,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Quechua: {{t+|qu|rimay}}
 * Romanian: {{t+|ro|vorbi}}, {{t+|ro|discuta}}
 * Romansch: [[pledar]], [[tschantschar]]
-* Russian: {{t+|ru|говорить|tr=govorít’}} {{impf}}, {{t+|ru|разговаривать|tr=razgovárivat’}} {{impf}}
+* Russian: {{t+|ru|говорить|tr=govorítʹ}} {{impf}}, {{t+|ru|разговаривать|tr=razgovárivatʹ}} {{impf}}
 * Sami:
 *: Lule Sami: {{tø|smj|hållat}}
 *: Northern Sami: {{tø|se|hállat}}, {{tø|se|hoallat}}, {{tø|se|hupmat}}
@@ -166,7 +166,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Spanish: {{t+|es|hablar}}
 * Swahili: {{t-|sw|ongea}}
 * Swedish: {{t+|sv|tala}}, {{t+|sv|prata}}, {{t+|sv|snacka}}
-* Tagalog: [[magsalita]]
+* Tagalog: {{t|tl|magsalita}}
 * Tajik: {{t-|tg|ҳарф задан|tr=harf zadan|sc=Cyrl}}
 * Thai: {{t+|th|พูด|tr=pôot}}
 * Tupinambá: [[nhe'eng]]
