--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -82,6 +82,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 ====Translations====
 {{trans-top|to communicate with one's voice using words}}
 * Afrikaans: {{t-|af|praat}}
+* Albanian: {{t|sq|flas}}
 * Arabic: {{t-|ar|تحدث|tr=taḥáddaṯa}}, {{t-|ar|تكلم|tr=takállama}}
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
 * Asturian: {{t+|ast|falar}}
@@ -129,8 +130,8 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t+|jbo|tavla}}
 * Luxembourgish: {{t-|lb|schwätzen}}
-* Macedonian: {{t-|mk|зборува|tr=zbóruva}}
 {{trans-mid}}
+* Macedonian: {{t-|mk|зборува|tr=zbóruva}}
 * Malay: {{t|ms|bercakap}}
 * Maltese: {{t-|mt|tkellem}}
 * Marathi: {{t-|mr|बोलणे|sc=Deva}}
@@ -144,7 +145,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Old Saxon: {{tø|osx|sprekan}}
 * Persian: {{t+|fa|حرف زدن|tr=harf zadan}}
 * Pipil: {{tø|ppl|taketza}}, {{tø|ppl|taquetza}}
-* Polish: {{t+|pl|mówić}}
+* Polish: {{t+|pl|mówić}}, {{t|pl|rozmawiać}}
 * Portuguese: {{t+|pt|falar}}
 * Punjabi: {{t-|pa|ਬੋਲਣਾ|sc=Guru}}
 * Quechua: {{t+|qu|rimay}}
