--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -81,11 +81,13 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 
 ====Translations====
 {{trans-top|to communicate with one's voice using words}}
+* {{trreq|Abkhaz}}
 * Afrikaans: {{t-|af|praat}}
 * Albanian: {{t|sq|flas}}
 * Arabic: {{t-|ar|تحدث|tr=taḥáddaṯa}}, {{t-|ar|تكلم|tr=takállama}}
 * Armenian: {{t+|hy|խոսել|tr=khosel}}
 * Asturian: {{t+|ast|falar}}
+* {{trreq|Avar}}
 * Azeri: {{t+|az|danışmaq}}
 * Belarusian: {{t-|be|гаварыць|tr=havarýcʹ}}, {{t-|be|размаўляць|tr=razmaŭljácʹ}}
 * Bengali: {{t-|bn|বলা|tr=bôla|sc=Beng}}
@@ -93,6 +95,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Bulgarian: {{t+|bg|говоря|tr=govórja}}
 * Burmese: {{t+|my|ပြော|tr=pyaw:|sc=Mymr}}, {{qualifier|formal}} {{t+|my|မြွက်|tr=mywet|sc=Mymr}}
 * Catalan: {{t+|ca|parlar}}
+* {{trreq|Chechen}}
 * Chinese:
 *: Mandarin: {{t|cmn|說|sc=Hani}}, {{t+|cmn|说|tr=shuō|sc=Hani}}, {{t|cmn|說話|sc=Hani}}, {{t+|cmn|说话|tr=shuōhuà|sc=Hani}}, {{t|cmn|講|sc=Hani}}, {{t+|cmn|讲|tr=jiǎng|sc=Hani}}
 * Czech: {{t+|cs|mluvit}}, {{t-|cs|hovořit}}
@@ -130,8 +133,8 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t+|jbo|tavla}}
 * Luxembourgish: {{t-|lb|schwätzen}}
-* Macedonian: {{t-|mk|зборува|tr=zbóruva}}
 {{trans-mid}}
+* Macedonian: {{t-|mk|зборува|tr=zbóruva}}
 * Malay: {{t|ms|bercakap}}
 * Maltese: {{t-|mt|tkellem}}
 * Marathi: {{t-|mr|बोलणे|sc=Deva}}
@@ -143,6 +146,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Occitan: {{t+|oc|parlar}}
 * Old English: {{t-|ang|sprecan}}, {{t-|ang|specan}}
 * Old Saxon: {{tø|osx|sprekan}}
+* {{trreq|Ossetian}}
 * Persian: {{t+|fa|حرف زدن|tr=harf zadan}}
 * Pipil: {{tø|ppl|taketza}}, {{tø|ppl|taquetza}}
 * Polish: {{t+|pl|mówić}}, {{t|pl|rozmawiać}}
@@ -174,6 +178,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * Tupinambá: [[nhe'eng]]
 * Turkish: {{t+|tr|konuşmak}}
 * Turkmen: {{t|tk|gürlemek}}, {{t|tk|geplemek}}, {{t|tk|sözlemek}}
+* {{trreq|Tuvan}}
 * Ukrainian: {{t-|uk|говорити|tr=hovorýty}}, {{t+|uk|розмовляти|tr=rozmovljáty}}
 * Urdu: {{t-|ur|بولنا|tr=bolnā}}
 * Uzbek: {{t+|uz|gaplashmoq}}
