--- a/en/偫/偫.11131.wikitext
+++ b/en/偫/偫.11131.wikitext
@@ -35,7 +35,7 @@
 ==Korean==
 
 ===Hanja===
-{{ko-hanja|hangeul=치|rv=chi|mr=ch'i}}
+{{ko-hanja|hangeul=치|rv=chi|mr=ch'i|y=chi}}
 
 # {{defn|lang=ko|sort=人09}}
 
