--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -44,6 +44,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Dutch: {{t+|nl|overgeven}}, {{t+|nl|braken}}, {{t+|nl|kotsen}} {{qualifier|colloquial}}
 * Esperanto: {{t-|eo|vomi}}
 * Estonian: {{t-|et|oksendama}}
+* Faroese: {{t|fo|spýggja}}
 * Finnish: {{t+|fi|oksentaa}}
 * French: {{t+|fr|vomir}}, {{t+|fr|rendre}}, {{t+|fr|rejeter}}, {{t+|fr|dégobiller}} {{qualifier|familiar}}
 * Galician: {{t+|gl|vomitar}}
@@ -66,6 +67,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Maltese: {{t-|mt|irrimetta}}, {{t-|mt|qala'}}
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t-|no|brekke seg}}
 * Occitan: {{t-|oc|vomir}}
+* Old Norse: {{tø|non|spýja}}
 * Polish: {{t+|pl|wymiotować}}
 * Portuguese: {{t+|pt|vomitar}}, {{t+|pt|regurgitar}}
 * Rapa Nui: {{tø|rap|rua}}
@@ -75,7 +77,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * {{ttbc|Serbo-Croatian}}:
 *: Cyrillic: {{t-|sh|ригати|sc=Cyrl}}, {{t-|sh|збљувати|sc=Cyrl}}, {{t-|sh|повратити|sc=Cyrl}}, {{t-|sh|бљувати|sc=Cyrl}}, , {{t-|sh|повраћати|sc=Cyrl}}
 *: Roman: {{t-|sh|rigati}}, {{t-|sh|zbljuvati}}, {{t-|sh|povratiti}}, {{t-|sh|bljuvati}}, {{t-|sh|povraćati}}
-* Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}
+* Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}, {{t|es|echar la pota}}
 * Swahili: {{t-|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}, {{t-|sv|kasta upp}}
 * Tamil: {{t+|ta|குமட்டு|tr=kumaṭṭu|sc=Taml}}, {{t-|ta|உவட்டு|tr=uvaṭṭu|sc=Taml}}, {{t-|ta|உவாந்தி|tr=uvāndi|sc=Taml}}, {{t+|ta|வாந்தி|tr=vāndi|sc=Taml}}, {{t+|ta|வாந்தி|tr=vāndi|sc=Taml}}
