--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -35,6 +35,8 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Armenian: {{t-|hy|հետ տալ|tr=het tal}}, {{t+|hy|փսխել|tr=p'sxel}}, {{t-|hy|ործկալ|tr=orçkal}}
 * Aromanian: {{t-|rup|vomu}}
 * Asturian: {{t-|ast|vomitar}}
+* Belarusian: {{t|be|ванітаваць|tr=vanitavácʹ|sc=Cyrl}}, {{t|be|бляваць|tr=bljavácʹ|sc=Cyrl}}, {{t|be|рваць|tr=rvacʹ|sc=Cyrl}} {{qualifier|impersonal}}
+* Bulgarian: {{t|bg|повръщам|tr=povrǎštam|sc=Cyrl}}
 * Burmese: {{t+|my|အန်|tr=an|sc=Mymr}}
 * Catalan: {{t+|ca|vomitar}}
 * Chinese:
@@ -52,12 +54,13 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Greek: {{t+|el|εξεμώ|tr=exemó}}, {{t-SOP|el|[[κάνω#Greek|κάνω]] [[εμετό#Greek|εμετό]]|tr=káno emetó}}, {{t+|el|ξερνώ|tr=xernó}} {{qualifier|colloquial}}
 *: Ancient: {{tø|grc|ἐμέω|tr=emeō|sc=polytonic}}, {{tø|grc|ἐξεμέω|sc=polytonic}}
 * Hebrew: {{t-|he|הקיא|tr=hekí}}
+* Hindi: {{t|hi|उल्टी करना|tr=ulṭī karnā|sc=Deva}}, {{t|hi|वमन करना|tr=vaman karnā|sc=Deva}}
 * Hungarian: {{t+|hu|hány}}
 * Irish: {{t-|ga|aisig}}
 *: Old Irish: {{tø|sga|sceid|alt=sceïd}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
-{{trans-mid}}
 * Japanese: {{t+|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する|sc=Jpan}}, {{t-|ja|戻す|tr=もどす, modosu|sc=Jpan}}
+{{trans-mid}}
 * Korean: {{t+|ko|게우다|tr=ge-uda|sc=Kore}}
 * Latin: {{t-|la|vomo|alt=vomō}}, {{t-|la|vomito|alt=vomitō}}
 * Latvian: {{t+|lv|vemt}}
@@ -68,6 +71,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t-|no|brekke seg}}
 * Occitan: {{t-|oc|vomir}}
 * Old Norse: {{tø|non|spýja}}
+* Persian: {{t|fa|قی کردن|tr=qay kardan|sc=fa-Arab}}
 * Polish: {{t+|pl|wymiotować}}
 * Portuguese: {{t+|pt|vomitar}}, {{t+|pt|regurgitar}}
 * Rapa Nui: {{tø|rap|rua}}
@@ -77,12 +81,16 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * {{ttbc|Serbo-Croatian}}:
 *: Cyrillic: {{t-|sh|ригати|sc=Cyrl}}, {{t-|sh|збљувати|sc=Cyrl}}, {{t-|sh|повратити|sc=Cyrl}}, {{t-|sh|бљувати|sc=Cyrl}}, , {{t-|sh|повраћати|sc=Cyrl}}
 *: Roman: {{t-|sh|rigati}}, {{t-|sh|zbljuvati}}, {{t-|sh|povratiti}}, {{t-|sh|bljuvati}}, {{t-|sh|povraćati}}
+* Slovak: {{t|sk|zvracať}}
+* Slovene: {{t|sl|bruhati}}
 * Spanish: {{t+|es|vomitar}}, {{t+|es|devolver}}, {{t+|es|arrojar}}, {{t|es|echar la pota}}
 * Swahili: {{t-|sw|kutapika}}
 * Swedish: {{t+|sv|kräkas}}, {{t+|sv|spy}}, {{t-|sv|kasta upp}}
 * Tamil: {{t+|ta|குமட்டு|tr=kumaṭṭu|sc=Taml}}, {{t-|ta|உவட்டு|tr=uvaṭṭu|sc=Taml}}, {{t-|ta|உவாந்தி|tr=uvāndi|sc=Taml}}, {{t+|ta|வாந்தி|tr=vāndi|sc=Taml}}, {{t+|ta|வாந்தி|tr=vāndi|sc=Taml}}
+* Thai: {{t|th|อาเจียน|tr=aa jian|sc=Thai}}, {{t|th|อ้วก|tr=ûak|sc=Thai}}
 * Turkish: {{t+|tr|kusmak}}
-* Ukrainian: {{t+|uk|блювати|tr=bljuváty|sc=Cyrl}}
+* Ukrainian: {{t+|uk|блювати|tr=bljuváty|sc=Cyrl}}, {{t|uk|рвати|tr=rváty|sc=Cyrl}} {{qualifier|impersonal}}
+* Vietnamese: {{t|vi|nôn}}, {{t|vi|mửa}}
 {{trans-bottom}}
 
 ===Noun===
