--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -61,6 +61,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
 * Japanese: {{t+|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する|sc=Jpan}}, {{t-|ja|戻す|tr=もどす, modosu|sc=Jpan}}
 {{trans-mid}}
+* {{trreq|Khmer}}
 * Korean: {{t+|ko|게우다|tr=ge-uda|sc=Kore}}
 * Latin: {{t-|la|vomo|alt=vomō}}, {{t-|la|vomito|alt=vomitō}}
 * Latvian: {{t+|lv|vemt}}
