--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -16,6 +16,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{recons
 # An article of [[clothing]], usually worn by [[woman|women]] and [[girl]]s, that hangs from the [[waist]] and covers the lower part of the body.
 #* {{circa|1907}} {{w|O. Henry}}, ''The Purple Dress'':
 #*: "I like purple best," said Maida. "And old Schlegel has promised to make it for $8. It's going to be lovely. I'm going to have a plaited '''skirt''' and a blouse coat trimmed with a band of galloon under a white cloth collar with two rows of—"
+#: ''You should close your legs when wearing a '''skirt''', otherwise guys will see your crotch''
 # The part of a [[dress]] or [[robe]] that hangs below the [[waist]].
 #* '''1885''', {{w|Ada S. Ballin}}, ''The Science of Dress in Theory and Practice'', Chapter XI:
 #*: The petticoats and '''skirts''' ordinarily worn are decidedly the heaviest part of the dress ; hence it is necessary that some reform should be effected in these.
