--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -57,6 +57,7 @@ From {{etyl|enm}} {{term|cutten|lang=enm}}, {{term|kitten|lang=enm}}, {{term|kyt
 {{trans-bottom}}
 
 {{trans-top|reduced}}
+* Bengali: {{t|bn|কাটা|sc=Beng}}
 * Finnish: {{t-|fi|leikattu}}, {{t+|fi|vähennetty}}, {{t-|fi|kevennetty}}, {{t-|fi|heikennetty}}
 * German: {{t+|de|geschnitten}}
 * Italian: {{t+|it|ridotto}}
