--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -4,7 +4,7 @@
 {{stroke order|type=animate}}
 
 ===Etymology===
-{{Han compound|曰|正|ls=ic}}, logic of compound unclear.
+{{Han compound|早|止|ls=ic}}, logic of compound unclear.
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=6080<sub>1</sub>|canj=日一卜人 (AMYO)|ids=⿱[[曰]][[正]]}}
