--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -7,6 +7,7 @@ From {{etyl|es|en}} and {{etyl|fr|en}} {{term|libre||[[free]], having liberty, a
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈliː.bɹə/}}, {{X-SAMPA|/"li:.br@/}}
 * {{homophones|lang=en|Libra}}
+* {{a|US}} {{IPA|/ˈli.bɹə/|/ˈli.bɹeɪ/}}
 
 ===Adjective===
 {{en-adj|-}}
