--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -44,7 +44,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Esperanto: {{t-|eo|sekretario}}
 * Finnish: {{t+|fi|sihteeri}}
 * French: {{t+|fr|secrétaire|m|f}}
-* {{trreq|Georgian}}
+* Georgian: {{t|ka|მდივანი|sc=Geor}}
 * German: {{t+|de|Sekretär|m}}, {{t+|de|Sekretärin|f}}
 * Greek: {{t+|el|γραμματέας|m|f|tr=gramatéas}}
 * Hebrew: {{t-|he|מזכיר|m|tr=mazkir}}
@@ -53,9 +53,9 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 * Interlingua: [[secretaria]] {{f}}
 * Irish: {{t-|ga|rúnaí|m}}
 * Italian: {{t+|it|segretario|m}}
-{{trans-mid}}
 * Japanese: {{t-|ja|秘書|tr=ひしょ, hisho}}
 * Khmer: {{t+|km|ស្មៀន|sc=Khmr|tr=smien}}
+{{trans-mid}}
 * Korean: {{t+|ko|비서|tr=biseo|sc=Kore}} ({{t+|ko|秘書|sc=Kore}})
 * Kurdish:
 *: Kurmanji: [[katib]], [[sekreter]]
