--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -31,6 +31,7 @@ From {{etyl|nl|en}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settle
 * Burmese: {{t-|my|နယူးဇီလန္|tr=náyù zilã|sc=Mymr}}
 * Catalan: {{t+|ca|Nova Zelanda}}
 * Chinese:
+*: Cantonese: {{tø|yue|紐西蘭 |sc=Hani}}
 *: Mandarin: {{t-|cmn|新西蘭|sc=Hani}}, {{t-|cmn|新西兰|tr=Xīn-Xīlán|sc=Hani}}, {{qualifier|Taiwan}} {{t|cmn|紐西蘭|sc=Hani}}, {{t|cmn|纽西兰|tr=Niǔ-Xīlán|sc=Hani}}
 * Cornish: {{t|kw|Mordir Nowyth|m}}
 * Czech: {{t+|cs|Nový Zéland|m}}
