--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -202,6 +202,7 @@ From {{etyl|enm|en}} {{term|floten|lang=enm}}, from {{etyl|ang|en}} {{term|floti
 * Khmer: {{t-|km|អន្ដែត|tr=on-dait}}
 * Latin: {{t-|la|fluctuo}}
 * Lithuanian: {{t-|lt|plūduriuoti}} {{impf}}; {{t+|lt|plaukti}} {{impf}}
+* Maori: {{t|mi|mānu}}
 * Portuguese: {{t+|pt|boiar}}, {{t+|pt|flutuar}}
 * Romanian: {{t+|ro|pluti}}
 * Romansch: {{t-|rm|flottar}}
