--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -50,6 +50,7 @@
 * Hebrew: {{qualifier|tortoise or turtle}} {{t+|he|צב|m|tr=tzav|sc=Hebr}}
 * Hindi: {{t-|hi|कछुआ|m|tr=kachu'ā|sc=Deva}}
 * Hungarian: {{t+|hu|teknősbéka}}, {{t-|hu|teknős}}
+* Icelandic: {{t|is|landskjaldbaka|f}}, {{t|is|skjaldbaka|f}} {{qualifier|tortoise or turtle}}
 * Indonesian: {{t+|id|kura-kura}}, {{t+|id|penyu}}
 * Isthmus Zapotec: {{tø|zai|bigu}}
 * Italian: {{qualifier|tortoise or turtle}} {{t+|it|tartaruga|f}}
@@ -65,6 +66,7 @@
 * Latvian: {{qualifier|tortoise or turtle}} {{t+|lv|bruņurupucis|m}}
 {{trans-mid}}
 * Lithuanian: {{qualifier|tortoise or turtle}} {{t+|lt|vėžlys|m}}
+* Luxembourgish: {{t|lb|Landdeckelsmouk|f}}
 * Macedonian: {{qualifier|tortoise or turtle}} {{t-|mk|желка|f|tr=žélka}}
 * Malay: {{t-|ms|kura-kura}}
 * Malayalam: {{t+|ml|ആമ|tr=āma|sc=Mlym}}
