--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -85,6 +85,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Gujarati: {{t-|gu|ફ્રાન્સ|tr=phrāns|sc=Gujr}}
 * Haitian Creole: {{tø|ht|Frans}}
 * Hausa: {{t-|ha|Faransa|f|alt=Fàr̃ansà}}
+* Hawaiian: {{tø|haw|Palani}}
 * Hebrew: {{t+|he|צרפת|f|alt=צָרְפַת|tr=tsarfát}} (''classical:'' Ṣārəphath)
 * Hindi: {{t-|hi|फ़्रांस|tr=frāns}}, {{t-|hi|फ़्राँस|tr=frāns}}, {{t+|hi|फ़्रान्स|m|tr=frāns|sc=Deva}}, {{t+|hi|फ्रांस|tr=phrāns|sc=Deva}}
 * Hungarian: {{t+|hu|Franciaország}}
