--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -41,7 +41,7 @@
 * Greek: {{t+|el|κετσές|m|tr=ketsés|sc=Grek}}
 {{trans-mid}}
 * Hebrew: {{t+|he|לבד|m|tr=léved}}
-* Hungarian: {{t|hu|nemez}}
+* Hungarian: {{t|hu|nemez}}, {{t|hu|filc}}
 * Ido: {{t+|io|felto}}
 * Italian: {{t+|it|feltro|m}}
 * Japanese: {{t-|ja|フェルト|tr=feruto|sc=Jpan}}, {{t-|ja|羅紗|tr=らしゃ, rasha|sc=Jpan}}
