--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -154,7 +154,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Telugu: [[లాగు]] (laagu)
 * Thai: {{t+|th|ดึง|tr=deung|sc=Thai}}
 * Turkish: {{t+|tr|çekmek}}
-* Ukrainian: {{qualifier|abstract}} {{t-|uk|тягати|tr=tjaháty|sc=Cyrl}} {{impf}}; {{qualifier|concrete}} {{t-|uk|тягти|tr=tjahtý|sc=Cyrl}} {{impf}}, {{t-|uk|тягнути|tr=tjahnúty|sc=Cyrl}} {{impf}}, {{t-|uk|потягнути|tr=potjahnúty|sc=Cyrl}} {{pf.}}
+* Ukrainian: {{qualifier|abstract}} {{t-|uk|тягати|tr=tjaháty|sc=Cyrl}} {{impf}}; {{qualifier|concrete}} {{t-|uk|тягти|tr=tjahtý|sc=Cyrl}} {{impf}}, {{t-|uk|потягти|tr=potjahtý|sc=Cyrl}} {{pf}}, {{t-|uk|тягнути|tr=tjahnúty|sc=Cyrl}} {{impf}}, {{t-|uk|потягнути|tr=potjahnúty|sc=Cyrl}} {{pf.}}
 * Urdu: {{t-|ur|کهينچنا|tr=khī̃cnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|kéo}}, {{t+|vi|giật}}
 * Walloon: {{t+|wa|saetchî}}, {{t+|wa|haetchî}}
