--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -46,7 +46,7 @@
 * German: {{t+|de|Vereinigte Staaten von Amerika|m-p}}, {{t+|de|Vereinigte Staaten|m-p}}, {{t+|de|USA|m-p|f-s}}
 * Greek: {{t+|el|Ηνωμένες Πολιτείες της Αμερικής|f-p|tr=Inoménes Politeíes tis Amerikís}} {{qualifier|official}}, {{t-|el|Ηνωμένες Πολιτείες Αμερικής|f-p|tr=Inoménes Politeíes Amerikís}}, {{t+|el|Ηνωμένες Πολιτείες|f-p|tr=Inoménes Politeíes}}, {{t+|el|ΗΠΑ|f-p|tr=IPA}}
 * Gujarati: {{t-|gu|સંયુકત રાજ્ય અમેરિકા|tr=sanyukat rājya amērikā|sc=Gujr}}
-* Hawaiian: {{tø|haw|'Amelika Huipū'ia}}, {{tø|haw|ʻAmelika Hui}}
+* Hawaiian: {{tø|haw|ʻAmelika Huipūʻia}}, {{tø|haw|ʻAmelika Hui}}
 * Hebrew: {{t-|he|ארצות הברית של אמריקה|tr=Artsot ha-Brit shel Amerika}}, {{t+|he|ארצות הברית|tr=Artsot ha-Brit}}, {{t-|he|ארה״ב|tr=ARH-B}}
 * {{trreq|hil}}
 * Hindi: {{t-|hi|संयुक्त राज्य अमरीका|tr=sanyukta rājya amrīkā}}, {{t-|hi|संयुक्त राष्ट्र अमरीका|tr=sanyukta rāṣṭra amrīkā}}
