--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -3,6 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
+{{rfv-etymology}}
 First attested in {{etyl|enm|en}}, probably from {{etyl|gd|en}} {{term|stob||to prick, to prod, to push, to thrust|lang=gd}}.
 
 ===Pronunciation===
