--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -16,7 +16,10 @@
 {{en-noun}}
 {{wikipedia|Port|Port (place where ships dock)}}
 
-# A place on the [[coast]] at which ships can shelter, or dock to load and unload cargo or passengers.
+# A place on the [[coast]] at which ships can [[shelter]], or [[dock]] to load and unload [[cargo]] or [[passenger]]s.
+#*{{quote-magazine|date=2013-06-08|volume=407|issue=8839|page=52|magazine={{w|The Economist}}
+|title=[http://www.economist.com/news/international/21579039-chinas-growing-empire-ports-abroad-mainly-about-trade-not-aggression-new-masters The new masters and commanders]
+|passage=From the ground, Colombo’s '''port''' does not look like much. Those entering it are greeted by wire fences, walls dating back to colonial times and security posts. For mariners leaving the '''port''' after lonely nights on the high seas, the delights of the B52 Night Club and Stallion Pub lie a stumble away.}}
 # A town or city containing such a place.
 # {{context|nautical|uncountable|lang=en}} The left-hand side of a [[vessel]], including aircraft, when one is facing the front. Port does not change based on the orientation of the person aboard the craft.
 
