--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -70,6 +70,7 @@ From {{etyl|sh|en}} [[Jugoslavija]], in turn from [[jug]]o (''south'') and '''sl
 ===See also===
 * [[Appendix:Countries of the world]]
 
+[[Category:English words suffixed with -ia]]
 [[Category:en:Countries]]
 [[Category:en:Yugoslavia]]
 
