--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -28,6 +28,8 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 |url=http://www.guardian.co.uk/world/2012/apr/23/francois-hollande-french-election
 |page=
 |passage=Hollande told cheering supporters in his rural fiefdom of Corrèze in south-west '''France''' that he was best-placed to lead '''France''' towards change, saying the vote marked a "rejection" of Sarkozy and a "sanction" against his five years in office.}}
+# {{surname|French|from=French}}
+#: [[w:Anatole France|Anatole France]], a French poet, journalist, and novelist
 
 ====Related terms====
 * [[Franco-]]
@@ -176,6 +178,12 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Welsh: {{t+|cy|Ffrainc|f}}
 * West Frisian: {{t+|fy|Frankryk}}
 * Yiddish: {{t-|yi|פֿראַנקרײַך|n|tr=Frankraykh|sc=Hebr}}
+{{trans-bottom}}
+
+{{trans-top|a French surname}}
+* French: {{t|fr|France|m|f}}
+{{trans-mid}}
+* Russian: {{t|ru|Франс|m|f|tr=Frans}}
 {{trans-bottom}}
 
 ===See also===
