--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -3,7 +3,9 @@
 {{wikipedia}}
 
 ===Etymology===
-First attested in {{etyl|enm|en}}. Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, to push, to thrust|lang=gd}}; supposed by others to be from a {{etyl|sco|en}} word.
+First attested in Scottish English (compare Scots {{term|stob|lang=sco}}, {{term|stobbe|lang=sco}}, {{term|stabb||a pointed stick or stake; a thrust with a pointed weapon|lang=sco}}), from {{etyl|enm|en}} {{term|stabbe|lang=enm}}, probably a variant of {{etyl|enm|en}} {{term|stob|lang=enm}}, {{term|stub|lang=enm}}, {{term|stubbe||pointed stick, stake, thorn, stub, stump|lang=enm}}, from {{etyl|non|en}} {{term|stobbi|lang=non}}, {{term|stubbi|lang=non}} or {{etyl|ang|en}} {{term|stybb|lang=ang}}. Cognate with {{langname|dum}} {{term|stobbe|lang=dum}}.
+
+Supposed by some to derive from {{etyl|gd|en}} {{term|stob||to prick, to prod, to push, to thrust|lang=gd}}; supposed by others to be from a {{etyl|sco|en}} word.
 
 ===Pronunciation===
 * {{enPR|stăb}}, {{IPA|/stæb/}}, {{X-SAMPA|/st{b/}}
