--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -32,6 +32,7 @@
 * Finnish: {{t+|fi|pellavan värinen}}
 {{trans-mid}}
 * Japanese: [[亜麻]][[色]]の (あまいろの, amairo no)
+* Maori: {{t|mi|kōrito }}
 * Polish: [[lniany]] {{m}}, [[jasnobrązowy]] {{m}}
 * Portuguese: [[cor de linho]] {{f}}
 {{trans-bottom}}
