--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -78,6 +78,7 @@
 * Malay: {{t-|ms|Amerika Syarikat}}, {{t-|ms|AS}}
 * Malayalam: {{t-|ml|അമേരിക്കൻ ഐക്യനാടുകൾ|sc=Mlym}}
 * Maltese: {{t-|mt|Stati Uniti ta' l-Amerika}}, {{t-|mt|l-Istati Uniti ta' l-Amerika}}, {{t-|mt|Stati Uniti}}, {{t-|mt|l-Istati Uniti}}, {{t-|mt|USA}}
+* Maori: {{t|mi|Hononga-o-Amerika}}
 * Marathi: {{t-|mr|अमेरिकेची संयुक्त संस्थाने|tr=amerikecī sanyukta sansthāne|sc=Deva}}
 * Mongolian: {{t+|mn|Америкийн Нэгдсэн Улс|tr=Amerikiyn Negdsen Uls|sc=Cyrl}}
 * Navajo: {{tø|nv|Wááshindoon bikéyah ałhidadiidzooígíí}}
