--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -234,17 +234,20 @@ From {{etyl|ang|en}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[ge
 {{en-noun}}
 
 # An [[occasion]] of fighting.
-#: ''One of them got stabbed to death during the '''fight'''.''
+#: {{usex|One of them got stabbed to death during the '''fight'''.}}
 # {{context|archaic|lang=en}} A [[battle]] between opposing armies.
 # A [[physical]] [[confrontation]] or [[combat]] between two or more people or groups.
-#* ''Watch your language, are you looking for a '''fight'''?''
+#: {{usex|Watch your language, are you looking for a '''fight'''?}}
 # {{context|sports|lang=en}} A [[boxing]] or [[martial arts]] [[match]].
-#* ''I'm going to Nick’s to watch the big '''fight''' tomorrow night.''
+#: {{usex|I'm going to Nick’s to watch the big '''fight''' tomorrow night.}}
 # A [[conflict]], possibly nonphysical, with opposing ideas or forces; [[strife]].
-#* ''I'll put up a '''fight''' to save this company.''
-# The [[will]] or [[ability]] to fight
-#* ''As soon as he saw the size of his opponent, all the '''fight''' went out of him.''
-#* ''That little guy have a little '''fight''' inside him after all.''
+#*{{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
+|chapter=18|url=http://openlibrary.org/works/OL2004261W
+|passage=‘Then the father has a great '''fight''' with his terrible conscience,’ said Munday with granite seriousness. ‘Should he make a row with the police […]? Or should he say nothing about it and condone brutality for fear of appearing in the newspapers?}}
+#: {{usex|I'll put up a '''fight''' to save this company.}}
+# The [[will]] or [[ability]] to fight.
+#: {{usex|As soon as he saw the size of his opponent, all the '''fight''' went out of him.}}
+#: {{usex|That little guy have a little '''fight''' inside him after all.}}
 
 =====Synonyms=====
 * See also [[Wikisaurus:fight]]
