--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -13,31 +13,34 @@ From {{etyl|enm|en}} {{term|felen|lang=enm}}, from {{etyl|ang|en}} {{term|felan|
 {{en-verb|feels|feeling|felt}}
 
 # {{context|transitive|copulative|lang=en}} To become aware of through the [[skin]]; to use the [[sense]] of [[touch]].
-#: ''You can '''feel''' a heartbeat if you put your fingers on your breast.''
-#: ''I '''felt''' downright hot and miserable evening at night.''
+#: {{usex|You can '''feel''' a heartbeat if you put your fingers on your breast.}}
+#: {{usex|I '''felt''' downright hot and miserable evening at night.}}
 # {{context|transitive|lang=en}} To experience an emotion or other mental state about.
-#: ''I can '''feel''' the sadness in his poems.''
+#: {{usex|I can '''feel''' the sadness in his poems.}}
 # {{context|transitive|lang=en}} To [[find]] one's [[way]] ([[literally]] or [[figuratively]]) by touching or using cautious movements.
-#: ''I '''felt''' my way through the darkened room.''
-#: ''I '''felt''' my way cautiously through the dangerous business maneuver.''
+#: {{usex|I '''felt''' my way through the darkened room.}}
+#: {{usex|I '''felt''' my way cautiously through the dangerous business maneuver.}}
 # {{context|transitive|lang=en}} To be or become [[aware]] of.
 # {{context|transitive|lang=en}} To experience the [[consequence]]s of.
-#: '''''Feel''' my wrath!''
+#: {{usex|'''Feel''' my wrath!}}
 # {{context|transitive|lang=en}} To [[think]], [[believe]], or have an [[impression]] concerning.
-#: ''I '''feel''' that we need to try harder.''
+#*{{quote-book|year=1963|author={{w|Margery Allingham}}|title={{w|The China Governess}}
+|chapter=19|url=http://openlibrary.org/works/OL2004261W
+|passage=When Timothy and Julia hurried up the staircase to the bedroom floor, where a considerable commotion was taking place, Tim took Barry Leach with him. He had him gripped firmly by the arm, since he '''felt''' it was not safe to let him loose, and he had no immediate idea what to do with him.}}
+#: {{usex|I '''feel''' that we need to try harder.}}
 # {{context|intransitive|lang=en}} To [[receive]] [[information]] by [[touch]] or by any [[neuron]]s other than those responsible for sight, smell, taste, or hearing.
 # {{context|intransitive|lang=en}} To search by sense of touch.
-#: ''He '''felt''' for the light switch in the dark.''
+#: {{usex|He '''felt''' for the light switch in the dark.}}
 # {{context|intransitive|copulative|lang=en}} To experience an emotion or other mental state.
-#: ''He obviously '''feels''' strongly about it.''
-#: ''She '''felt''' even more upset when she heard the details.''
+#: {{usex|He obviously '''feels''' strongly about it.}}
+#: {{usex|She '''felt''' even more upset when she heard the details.}}
 # {{context|copulative|lang=en}} To [[seem]] (through [[touch]] or otherwise).
-#: ''It looks like wood, but it '''feels''' more like plastic.''
-#: ''This is supposed to be a party, but it '''feels''' more like a funeral!''
+#: {{usex|It looks like wood, but it '''feels''' more like plastic.}}
+#: {{usex|This is supposed to be a party, but it '''feels''' more like a funeral!}}
 # {{context|intransitive|lang=en}} To [[sympathise]].
-#: ''I '''feel''' for you and your plight.''
+#: {{usex|I '''feel''' for you and your plight.}}
 # {{context|transitive|US|slang|lang=en}} To [[understand]].
-#: ''I don't want you back here, ya '''feel''' me?''
+#: {{usex|I don't want you back here, ya '''feel''' me?}}
 
 ======Usage notes======
 * Most prescriptive grammarians prefer "I feel bad" to "I feel badly", but "I feel badly" is widely used in US English.
