--- a/en/倩/倩.11043.wikitext
+++ b/en/倩/倩.11043.wikitext
@@ -53,9 +53,12 @@
 ==Min Nan==
 
 ===Hanzi===
-{{nan-hanzi|poj=cia'2}}
+{{nan-hanzi|poj=chhiàⁿ (chhiaⁿ<sup>3</sup>), cia'2{{rfv-sense}}|tlpa=tshiànn (tshiann<sup>3</sup>)}}
 
 # (''Teochew'') please, excusing oneself. Example: 倩食 (cia'2 ziah8) is a very polite way of asking people to eat.
+
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=5730&curpage=1&sample=%E5%80%A9&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=2 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
 
 ----
 
