--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -62,6 +62,18 @@
 
 ----
 
+==Min Nan==
+
+===Hanzi===
+{{nan-hanzi|tlpa=ok (ok<sup>4</sup>), ònn (onn<sup>3</sup>)}}
+
+# {{defn|lang=nan|sort=心08}}
+
+====References====
+*[http://twblg.dict.edu.tw/holodict_new/result_detail.jsp?n_no=8366&curpage=1&sample=%E6%83%A1&radiobutton=1&querytarget=1&limit=20&pagenum=1&rowcount=20 Taiwan Min Nan Common Words Dictionary (臺灣閩南語常用詞辭典)]
+
+----
+
 ==Vietnamese==
 
 ===Han character===
